Changed front_page and removed console.log from index.js

--- a/front_page.html
+++ b/front_page.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1>Time Mircoservice Project</h1>
+<h1>Timestamp Mircoservice Project</h1>
 <h2>Example usage:</h2>
 <p>http://localhost:3000/January 11 2011</p>
 <p>http://localhost:3000/1294722000</p>
